Fixing contrast of non-active search buttons on mobile

--- a/src/views/homepage/components/featured-content-grid/search-featured-card.module.css
+++ b/src/views/homepage/components/featured-content-grid/search-featured-card.module.css
@@ -87,6 +87,12 @@
 	right: 0;
 	top: 0;
 	z-index: 2;
+
+	/* 500px with 16px base font */
+	@media (max-width: 31.25rem) {
+		/* hide on mobile because it decreases contrast too much */
+		display: none;
+	}
 }
 
 .buttonContainer {
